main.css
h1 {
    color: #B8B8B8;
}

body {
    background-color: #2E282A;
}

#info-flex-container {
    display: flex;
    flex-direction: column;
    /* background-color: rgba(79, 81, 125, 0.5); */
}

#explanation-container {
    width: 400px;
    border: 1px solid black;
    padding: 15px;

    color: white;
}

#analysis-button {
    width: 400px;
}

.main-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;

    width: 1000px;
    margin: auto;
    padding: 20px;
    background-color: #4F517D;

}





@media all and (max-width: 1150px) {
    .main-container {
        flex-direction: column;
        width: 700px;
    }

    #info-container {
        margin-left: 0px;
    }

}

